--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "daisyui": "^5.0.54",
     "fuse.js": "^7.1.0",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^7.8.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
